// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Overlay iframe, account error is ignored 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    .c5 {
  display: grid;
  font-weight: 300;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  font-size: 20px;
  line-height: 20px;
  height: 40px;
  border-radius: 4px 4px 0px 0px;
  padding: 0px;
  color: var(--grey);
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  font-family: 'Roboto',sans-serif;
  font-weight: 300;
  font-size: 12px;
  color: var(--darkgrey);
  background-color: var(--white);
  justify-self: right;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  grid-row: 2;
  grid-column: 1;
  width: 120px;
  height: 80px;
  margin-right: -33px;
}

.c13 > * {
  justify-self: left;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  margin-left: -14px;
}

.c13 > p {
  margin-left: auto;
  margin-right: auto;
  width: 63px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  justify-self: center;
  font-family: Roboto;
  font-style: normal;
  font-weight: normal;
  line-height: normal;
  font-size: 12px;
  color: var(--darkgrey);
}

.c4 {
  display: grid;
  justify-items: stretch;
  margin: 0px;
  padding: 0px;
  font-family: 'IBM Plex Sans','Helvetica Neue',Arial,sans-serif;
  width: 200px;
  height: 180px;
  grid-gap: 0px;
  background-clip: padding-box;
  grid-template-rows: 40px 140px;
  opacity: 1;
  cursor: pointer;
}

.c12 {
  display: grid;
  font-weight: 300;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  font-size: 20px;
  line-height: 20px;
  height: 40px;
  border-radius: 0px 0px 4px 4px;
  padding: 0px;
  width: 200px;
  background-color: var(--green);
  color: var(--white);
}

.c6 {
  display: grid;
  height: 140px;
  width: 200px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-items: center;
  text-align: center;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  padding: 0px;
  grid-template-rows: 40px 30px;
  grid-gap: 8px;
  padding-top: 0px;
  border: 1px solid transparent;
  border-radius: 4px;
  background-color: var(--white);
  padding-top: 13px;
}

.c6:hover {
  border: 1px solid var(--activegreen);
}

.c6:hover .c11 {
  background-color: var(--activegreen);
}

.c7 {
  font-size: 30px;
  text-transform: uppercase;
  color: var(--slate);
  font-weight: bold;
}

.c8 {
  font-size: 20px;
  font-weight: 300;
  color: var(--grey);
}

.c10 {
  font-size: 20px;
  font-weight: 300;
  color: var(--grey);
}

.c9 {
  color: var(--lightgrey);
}

.c14 {
  background-color: var(--brand);
  height: 28px;
  width: 28px;
  border-radius: 50%;
}

.c14 > svg {
  fill: white;
}

.c0 {
  position: fixed;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background: linear-gradient( rgba(255,255,255,0) 18%,rgba(255,255,255,0) 29%,var(--offwhite) 48% );
}

.c1 {
  position: fixed;
  display: grid;
  min-height: 375px;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: var(--offwhite);
  justify-items: center;
  padding: 32px;
  padding-bottom: 100px;
  grid-gap: 24px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c2 {
  font-size: 20px;
  font-family: 'Roboto',sans-serif;
  font-weight: bold;
  color: var(--slate);
  text-align: center;
}

.c3 {
  display: grid;
  grid-auto-flow: column;
  grid-gap: 32px;
  list-style: none;
  margin: 0px;
  padding: 0px;
  grid-row: 2;
  grid-column: 1;
}

@media only screen and (min-device-width:0px) and (max-device-width:736px) {
  .c13 {
    display: none;
  }
}

<div>
      <link
        href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono:300,400,500,700|IBM+Plex+Sans:300,400,500,700|IBM+Plex+Serif:300,400,700|Roboto:300,400,700"
        rel="stylesheet"
      />
      <section>
        <h1>
          HTML Ipsum Presents
        </h1>
        <p>
          <strong>
            Pellentesque habitant morbi tristique
          </strong>
           senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper.
          <em>
            Aenean ultricies mi vitae est.
          </em>
           Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed,
          <code>
            commodo vitae
          </code>
          , ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui.
          <a
            href="."
          >
            Donec non enim
          </a>
           in turpis pulvinar facilisis. Ut felis.
        </p>
        <h2>
          Header Level 2
        </h2>
        <ol>
          <li>
            Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
          </li>
          <li>
            Aliquam tincidunt mauris eu risus.
          </li>
        </ol>
        <blockquote>
          <p>
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus magna. Cras in mi at felis aliquet congue. Ut a est eget ligula molestie gravida. Curabitur massa. Donec eleifend, libero at sagittis mollis, tellus est malesuada tellus, at luctus turpis elit sit amet quam. Vivamus pretium ornare est.
          </p>
        </blockquote>
        <h3>
          Header Level 3
        </h3>
        <ul>
          <li>
            Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
          </li>
          <li>
            Aliquam tincidunt mauris eu risus.
          </li>
        </ul>
        <div
          class="c0"
        >
          <div
            class="c1"
            style="height: 0%;"
          >
            <h1
              class="c2"
            >
              You have reached your limit of free articles. Please purchase access
            </h1>
            <ul
              class="c3"
            >
              <li
                class="c4"
              >
                <header
                  class="c5"
                >
                  One Month
                </header>
                <div>
                  <div
                    class="c6"
                  >
                    <div
                      class="c7"
                    >
                      123400000000000000.00
                       Eth
                    </div>
                    <div>
                      <span
                        class="c8"
                      >
                        $
                        24,185,166,000b
                      </span>
                      <span
                        class="c9"
                      >
                         | 
                      </span>
                      <span
                        class="c10"
                      >
                        <span>
                           - 
                        </span>
                      </span>
                    </div>
                    <footer
                      class="c11 c12"
                    >
                      Purchase
                    </footer>
                  </div>
                </div>
              </li>
            </ul>
            <footer
              class="c13"
            >
              <div
                class="c14"
              >
                <svg
                  viewBox="0 0 56 56"
                >
                  <title />
                  <path
                    d="M42.315 22.461h-1.862v-6.92h-6.919v6.92H22.48v-6.92h-6.918v6.92h-1.877v3.288h1.877v5.18c0 6.481 5.606 11.77 12.485 11.77 6.84 0 12.406-5.289 12.406-11.77v-5.18h1.862zm-8.78 8.468a5.515 5.515 0 0 1-5.488 5.567 5.583 5.583 0 0 1-5.567-5.567v-5.18h11.054z"
                  />
                </svg>
              </div>
              <p>
                Powered by Unlock
              </p>
            </footer>
          </div>
        </div>
      </section>
    </div>
  </body>,
  "container": <div>
    <link
      href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono:300,400,500,700|IBM+Plex+Sans:300,400,500,700|IBM+Plex+Serif:300,400,700|Roboto:300,400,700"
      rel="stylesheet"
    />
    <section>
      <h1>
        HTML Ipsum Presents
      </h1>
      <p>
        <strong>
          Pellentesque habitant morbi tristique
        </strong>
         senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper.
        <em>
          Aenean ultricies mi vitae est.
        </em>
         Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed,
        <code>
          commodo vitae
        </code>
        , ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui.
        <a
          href="."
        >
          Donec non enim
        </a>
         in turpis pulvinar facilisis. Ut felis.
      </p>
      <h2>
        Header Level 2
      </h2>
      <ol>
        <li>
          Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
        </li>
        <li>
          Aliquam tincidunt mauris eu risus.
        </li>
      </ol>
      <blockquote>
        <p>
          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus magna. Cras in mi at felis aliquet congue. Ut a est eget ligula molestie gravida. Curabitur massa. Donec eleifend, libero at sagittis mollis, tellus est malesuada tellus, at luctus turpis elit sit amet quam. Vivamus pretium ornare est.
        </p>
      </blockquote>
      <h3>
        Header Level 3
      </h3>
      <ul>
        <li>
          Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
        </li>
        <li>
          Aliquam tincidunt mauris eu risus.
        </li>
      </ul>
      <div
        class="sc-7wmxqm-0 fANVjX"
      >
        <div
          class="sc-7wmxqm-1 kmwBAR"
          style="height: 0%;"
        >
          <h1
            class="sc-7wmxqm-2 iEBMAT"
          >
            You have reached your limit of free articles. Please purchase access
          </h1>
          <ul
            class="sc-7wmxqm-3 jZRqqJ"
          >
            <li
              class="sc-1549ebs-0 sc-5sgq84-0 bvdsPH"
            >
              <header
                class="sc-1549ebs-1 cWinrG"
              >
                One Month
              </header>
              <div>
                <div
                  class="sc-1549ebs-3 sc-5sgq84-2 dyJsTl"
                >
                  <div
                    class="sc-5sgq84-3 bIZSQm"
                  >
                    123400000000000000.00
                     Eth
                  </div>
                  <div>
                    <span
                      class="sc-5sgq84-4 gAXKCT"
                    >
                      $
                      24,185,166,000b
                    </span>
                    <span
                      class="sc-5sgq84-6 evsHkc"
                    >
                       | 
                    </span>
                    <span
                      class="sc-5sgq84-4 sc-5sgq84-5 BEVkH"
                    >
                      <span>
                         - 
                      </span>
                    </span>
                  </div>
                  <footer
                    class="sc-1549ebs-2 sc-5sgq84-1 frvQEr"
                  >
                    Purchase
                  </footer>
                </div>
              </div>
            </li>
          </ul>
          <footer
            class="sc-1549ebs-8 SGDXW"
          >
            <div
              class="sth0f3-0 kwQJpX"
            >
              <svg
                viewBox="0 0 56 56"
              >
                <title />
                <path
                  d="M42.315 22.461h-1.862v-6.92h-6.919v6.92H22.48v-6.92h-6.918v6.92h-1.877v3.288h1.877v5.18c0 6.481 5.606 11.77 12.485 11.77 6.84 0 12.406-5.289 12.406-11.77v-5.18h1.862zm-8.78 8.468a5.515 5.515 0 0 1-5.488 5.567 5.583 5.583 0 0 1-5.567-5.567v-5.18h11.054z"
                />
              </svg>
            </div>
            <p>
              Powered by Unlock
            </p>
          </footer>
        </div>
      </div>
    </section>
  </div>,
  "debug": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllBySelectText": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getAllByValue": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getBySelectText": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "getByValue": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllBySelectText": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryAllByValue": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryBySelectText": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "queryByValue": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Storyshots Overlay main window, account error is displayed 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    .c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  font-family: 'Roboto',sans-serif;
  font-weight: 300;
  font-size: 12px;
  color: var(--darkgrey);
  background-color: var(--white);
  justify-self: right;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  grid-row: 2;
  grid-column: 1;
  width: 120px;
  height: 80px;
  margin-right: -33px;
}

.c7 > * {
  justify-self: left;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  margin-left: -14px;
}

.c7 > p {
  margin-left: auto;
  margin-right: auto;
  width: 63px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  justify-self: center;
  font-family: Roboto;
  font-style: normal;
  font-weight: normal;
  line-height: normal;
  font-size: 12px;
  color: var(--darkgrey);
}

.c8 {
  background-color: var(--brand);
  height: 28px;
  width: 28px;
  border-radius: 50%;
}

.c8 > svg {
  fill: white;
}

.c4 {
  display: grid;
  row-gap: 16px;
  -webkit-column-gap: 32px;
  column-gap: 32px;
  border: solid 1px var(--lightgrey);
  grid-template-columns: 72px;
  grid-auto-flow: column;
  border-radius: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 32px;
  padding-bottom: 40px;
}

.c5 {
  width: 72px;
}

.c6 {
  display: grid;
  grid-gap: 16px;
}

.c6 > h1 {
  font-weight: bold;
  color: var(--red);
  margin: 0px;
  padding: 0px;
}

.c6 > p {
  margin: 0px;
  padding: 0px;
  font-size: 16px;
  color: var(--dimgrey);
}

.c0 {
  position: fixed;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background: linear-gradient( rgba(255,255,255,0) 18%,rgba(255,255,255,0) 29%,var(--offwhite) 48% );
}

.c1 {
  position: fixed;
  display: grid;
  min-height: 375px;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: var(--offwhite);
  justify-items: center;
  padding: 32px;
  padding-bottom: 100px;
  grid-gap: 24px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c2 {
  font-size: 20px;
  font-family: 'Roboto',sans-serif;
  font-weight: bold;
  color: var(--slate);
  text-align: center;
}

.c3 {
  display: grid;
  grid-auto-flow: column;
  grid-gap: 32px;
  list-style: none;
  margin: 0px;
  padding: 0px;
  grid-row: 2;
  grid-column: 1;
}

@media only screen and (min-device-width:0px) and (max-device-width:736px) {
  .c7 {
    display: none;
  }
}

@media (max-width:500px) {
  .c4 {
    grid-template-columns: 1fr;
    grid-auto-flow: row;
    padding: 16px;
  }
}

<div>
      <link
        href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono:300,400,500,700|IBM+Plex+Sans:300,400,500,700|IBM+Plex+Serif:300,400,700|Roboto:300,400,700"
        rel="stylesheet"
      />
      <section>
        <h1>
          HTML Ipsum Presents
        </h1>
        <p>
          <strong>
            Pellentesque habitant morbi tristique
          </strong>
           senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper.
          <em>
            Aenean ultricies mi vitae est.
          </em>
           Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed,
          <code>
            commodo vitae
          </code>
          , ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui.
          <a
            href="."
          >
            Donec non enim
          </a>
           in turpis pulvinar facilisis. Ut felis.
        </p>
        <h2>
          Header Level 2
        </h2>
        <ol>
          <li>
            Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
          </li>
          <li>
            Aliquam tincidunt mauris eu risus.
          </li>
        </ol>
        <blockquote>
          <p>
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus magna. Cras in mi at felis aliquet congue. Ut a est eget ligula molestie gravida. Curabitur massa. Donec eleifend, libero at sagittis mollis, tellus est malesuada tellus, at luctus turpis elit sit amet quam. Vivamus pretium ornare est.
          </p>
        </blockquote>
        <h3>
          Header Level 3
        </h3>
        <ul>
          <li>
            Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
          </li>
          <li>
            Aliquam tincidunt mauris eu risus.
          </li>
        </ul>
        <div
          class="c0"
        >
          <div
            class="c1"
            style="height: 0%;"
          >
            <h1
              class="c2"
            >
              You have reached your limit of free articles. Please purchase access
            </h1>
            <ul
              class="c3"
            >
              <section
                class="c4"
              >
                <img
                  class="c5"
                  src="/static/images/illustrations/error.svg"
                />
                <div
                  class="c6"
                >
                  <h1>
                    Need account
                  </h1>
                  <p>
                    In order to display this content, you need to connect a crypto-wallet to your browser.
                  </p>
                </div>
              </section>
            </ul>
            <footer
              class="c7"
            >
              <div
                class="c8"
              >
                <svg
                  viewBox="0 0 56 56"
                >
                  <title />
                  <path
                    d="M42.315 22.461h-1.862v-6.92h-6.919v6.92H22.48v-6.92h-6.918v6.92h-1.877v3.288h1.877v5.18c0 6.481 5.606 11.77 12.485 11.77 6.84 0 12.406-5.289 12.406-11.77v-5.18h1.862zm-8.78 8.468a5.515 5.515 0 0 1-5.488 5.567 5.583 5.583 0 0 1-5.567-5.567v-5.18h11.054z"
                  />
                </svg>
              </div>
              <p>
                Powered by Unlock
              </p>
            </footer>
          </div>
        </div>
      </section>
    </div>
  </body>,
  "container": <div>
    <link
      href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono:300,400,500,700|IBM+Plex+Sans:300,400,500,700|IBM+Plex+Serif:300,400,700|Roboto:300,400,700"
      rel="stylesheet"
    />
    <section>
      <h1>
        HTML Ipsum Presents
      </h1>
      <p>
        <strong>
          Pellentesque habitant morbi tristique
        </strong>
         senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper.
        <em>
          Aenean ultricies mi vitae est.
        </em>
         Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed,
        <code>
          commodo vitae
        </code>
        , ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui.
        <a
          href="."
        >
          Donec non enim
        </a>
         in turpis pulvinar facilisis. Ut felis.
      </p>
      <h2>
        Header Level 2
      </h2>
      <ol>
        <li>
          Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
        </li>
        <li>
          Aliquam tincidunt mauris eu risus.
        </li>
      </ol>
      <blockquote>
        <p>
          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus magna. Cras in mi at felis aliquet congue. Ut a est eget ligula molestie gravida. Curabitur massa. Donec eleifend, libero at sagittis mollis, tellus est malesuada tellus, at luctus turpis elit sit amet quam. Vivamus pretium ornare est.
        </p>
      </blockquote>
      <h3>
        Header Level 3
      </h3>
      <ul>
        <li>
          Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
        </li>
        <li>
          Aliquam tincidunt mauris eu risus.
        </li>
      </ul>
      <div
        class="sc-7wmxqm-0 fANVjX"
      >
        <div
          class="sc-7wmxqm-1 kmwBAR"
          style="height: 0%;"
        >
          <h1
            class="sc-7wmxqm-2 iEBMAT"
          >
            You have reached your limit of free articles. Please purchase access
          </h1>
          <ul
            class="sc-7wmxqm-3 jZRqqJ"
          >
            <section
              class="iopfkf-0 ciSpSG"
            >
              <img
                class="iopfkf-1 fTikWN"
                src="/static/images/illustrations/error.svg"
              />
              <div
                class="iopfkf-2 beHtrM"
              >
                <h1>
                  Need account
                </h1>
                <p>
                  In order to display this content, you need to connect a crypto-wallet to your browser.
                </p>
              </div>
            </section>
          </ul>
          <footer
            class="sc-1549ebs-8 SGDXW"
          >
            <div
              class="sth0f3-0 kwQJpX"
            >
              <svg
                viewBox="0 0 56 56"
              >
                <title />
                <path
                  d="M42.315 22.461h-1.862v-6.92h-6.919v6.92H22.48v-6.92h-6.918v6.92h-1.877v3.288h1.877v5.18c0 6.481 5.606 11.77 12.485 11.77 6.84 0 12.406-5.289 12.406-11.77v-5.18h1.862zm-8.78 8.468a5.515 5.515 0 0 1-5.488 5.567 5.583 5.583 0 0 1-5.567-5.567v-5.18h11.054z"
                />
              </svg>
            </div>
            <p>
              Powered by Unlock
            </p>
          </footer>
        </div>
      </div>
    </section>
  </div>,
  "debug": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllBySelectText": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getAllByValue": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getBySelectText": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "getByValue": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllBySelectText": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryAllByValue": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryBySelectText": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "queryByValue": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Storyshots Overlay with a single Lock 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c5 {
  display: grid;
  font-weight: 300;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  font-size: 20px;
  line-height: 20px;
  height: 40px;
  border-radius: 4px 4px 0px 0px;
  padding: 0px;
  color: var(--grey);
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  font-family: 'Roboto',sans-serif;
  font-weight: 300;
  font-size: 12px;
  color: var(--darkgrey);
  background-color: var(--white);
  justify-self: right;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  grid-row: 2;
  grid-column: 1;
  width: 120px;
  height: 80px;
  margin-right: -33px;
}

.c13 > * {
  justify-self: left;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  margin-left: -14px;
}

.c13 > p {
  margin-left: auto;
  margin-right: auto;
  width: 63px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  justify-self: center;
  font-family: Roboto;
  font-style: normal;
  font-weight: normal;
  line-height: normal;
  font-size: 12px;
  color: var(--darkgrey);
}

.c4 {
  display: grid;
  justify-items: stretch;
  margin: 0px;
  padding: 0px;
  font-family: 'IBM Plex Sans','Helvetica Neue',Arial,sans-serif;
  width: 200px;
  height: 180px;
  grid-gap: 0px;
  background-clip: padding-box;
  grid-template-rows: 40px 140px;
  opacity: 1;
  cursor: pointer;
}

.c12 {
  display: grid;
  font-weight: 300;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  font-size: 20px;
  line-height: 20px;
  height: 40px;
  border-radius: 0px 0px 4px 4px;
  padding: 0px;
  width: 200px;
  background-color: var(--green);
  color: var(--white);
}

.c6 {
  display: grid;
  height: 140px;
  width: 200px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-items: center;
  text-align: center;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  padding: 0px;
  grid-template-rows: 40px 30px;
  grid-gap: 8px;
  padding-top: 0px;
  border: 1px solid transparent;
  border-radius: 4px;
  background-color: var(--white);
  padding-top: 13px;
}

.c6:hover {
  border: 1px solid var(--activegreen);
}

.c6:hover .c11 {
  background-color: var(--activegreen);
}

.c7 {
  font-size: 30px;
  text-transform: uppercase;
  color: var(--slate);
  font-weight: bold;
}

.c8 {
  font-size: 20px;
  font-weight: 300;
  color: var(--grey);
}

.c10 {
  font-size: 20px;
  font-weight: 300;
  color: var(--grey);
}

.c9 {
  color: var(--lightgrey);
}

.c14 {
  background-color: var(--brand);
  height: 28px;
  width: 28px;
  border-radius: 50%;
}

.c14 > svg {
  fill: white;
}

.c0 {
  position: fixed;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background: linear-gradient( rgba(255,255,255,0) 18%,rgba(255,255,255,0) 29%,var(--offwhite) 48% );
}

.c1 {
  position: fixed;
  display: grid;
  min-height: 375px;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: var(--offwhite);
  justify-items: center;
  padding: 32px;
  padding-bottom: 100px;
  grid-gap: 24px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c2 {
  font-size: 20px;
  font-family: 'Roboto',sans-serif;
  font-weight: bold;
  color: var(--slate);
  text-align: center;
}

.c3 {
  display: grid;
  grid-auto-flow: column;
  grid-gap: 32px;
  list-style: none;
  margin: 0px;
  padding: 0px;
  grid-row: 2;
  grid-column: 1;
}

@media only screen and (min-device-width:0px) and (max-device-width:736px) {
  .c13 {
    display: none;
  }
}

<body>
    <div>
      <link
        href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono:300,400,500,700|IBM+Plex+Sans:300,400,500,700|IBM+Plex+Serif:300,400,700|Roboto:300,400,700"
        rel="stylesheet"
      />
      <section>
        <h1>
          HTML Ipsum Presents
        </h1>
        <p>
          <strong>
            Pellentesque habitant morbi tristique
          </strong>
           senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper.
          <em>
            Aenean ultricies mi vitae est.
          </em>
           Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed,
          <code>
            commodo vitae
          </code>
          , ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui.
          <a
            href="."
          >
            Donec non enim
          </a>
           in turpis pulvinar facilisis. Ut felis.
        </p>
        <h2>
          Header Level 2
        </h2>
        <ol>
          <li>
            Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
          </li>
          <li>
            Aliquam tincidunt mauris eu risus.
          </li>
        </ol>
        <blockquote>
          <p>
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus magna. Cras in mi at felis aliquet congue. Ut a est eget ligula molestie gravida. Curabitur massa. Donec eleifend, libero at sagittis mollis, tellus est malesuada tellus, at luctus turpis elit sit amet quam. Vivamus pretium ornare est.
          </p>
        </blockquote>
        <h3>
          Header Level 3
        </h3>
        <ul>
          <li>
            Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
          </li>
          <li>
            Aliquam tincidunt mauris eu risus.
          </li>
        </ul>
        <div
          class="c0"
        >
          <div
            class="c1"
            style="height: 0%;"
          >
            <h1
              class="c2"
            >
              You have reached your limit of free articles. Please purchase access
            </h1>
            <ul
              class="c3"
            >
              <li
                class="c4"
              >
                <header
                  class="c5"
                >
                  One Month
                </header>
                <div>
                  <div
                    class="c6"
                  >
                    <div
                      class="c7"
                    >
                      0.12
                       Eth
                    </div>
                    <div>
                      <span
                        class="c8"
                      >
                        $
                        24.11
                      </span>
                      <span
                        class="c9"
                      >
                         | 
                      </span>
                      <span
                        class="c10"
                      >
                        <span>
                          143 days
                        </span>
                      </span>
                    </div>
                    <footer
                      class="c11 c12"
                    >
                      Purchase
                    </footer>
                  </div>
                </div>
              </li>
            </ul>
            <footer
              class="c13"
            >
              <div
                class="c14"
              >
                <svg
                  viewBox="0 0 56 56"
                >
                  <title />
                  <path
                    d="M42.315 22.461h-1.862v-6.92h-6.919v6.92H22.48v-6.92h-6.918v6.92h-1.877v3.288h1.877v5.18c0 6.481 5.606 11.77 12.485 11.77 6.84 0 12.406-5.289 12.406-11.77v-5.18h1.862zm-8.78 8.468a5.515 5.515 0 0 1-5.488 5.567 5.583 5.583 0 0 1-5.567-5.567v-5.18h11.054z"
                  />
                </svg>
              </div>
              <p>
                Powered by Unlock
              </p>
            </footer>
          </div>
        </div>
      </section>
    </div>
  </body>,
  "container": <div>
    <link
      href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono:300,400,500,700|IBM+Plex+Sans:300,400,500,700|IBM+Plex+Serif:300,400,700|Roboto:300,400,700"
      rel="stylesheet"
    />
    <section>
      <h1>
        HTML Ipsum Presents
      </h1>
      <p>
        <strong>
          Pellentesque habitant morbi tristique
        </strong>
         senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper.
        <em>
          Aenean ultricies mi vitae est.
        </em>
         Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed,
        <code>
          commodo vitae
        </code>
        , ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui.
        <a
          href="."
        >
          Donec non enim
        </a>
         in turpis pulvinar facilisis. Ut felis.
      </p>
      <h2>
        Header Level 2
      </h2>
      <ol>
        <li>
          Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
        </li>
        <li>
          Aliquam tincidunt mauris eu risus.
        </li>
      </ol>
      <blockquote>
        <p>
          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus magna. Cras in mi at felis aliquet congue. Ut a est eget ligula molestie gravida. Curabitur massa. Donec eleifend, libero at sagittis mollis, tellus est malesuada tellus, at luctus turpis elit sit amet quam. Vivamus pretium ornare est.
        </p>
      </blockquote>
      <h3>
        Header Level 3
      </h3>
      <ul>
        <li>
          Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
        </li>
        <li>
          Aliquam tincidunt mauris eu risus.
        </li>
      </ul>
      <div
        class="sc-7wmxqm-0 fANVjX"
      >
        <div
          class="sc-7wmxqm-1 kmwBAR"
          style="height: 0%;"
        >
          <h1
            class="sc-7wmxqm-2 iEBMAT"
          >
            You have reached your limit of free articles. Please purchase access
          </h1>
          <ul
            class="sc-7wmxqm-3 jZRqqJ"
          >
            <li
              class="sc-1549ebs-0 sc-5sgq84-0 bvdsPH"
            >
              <header
                class="sc-1549ebs-1 cWinrG"
              >
                One Month
              </header>
              <div>
                <div
                  class="sc-1549ebs-3 sc-5sgq84-2 dyJsTl"
                >
                  <div
                    class="sc-5sgq84-3 bIZSQm"
                  >
                    0.12
                     Eth
                  </div>
                  <div>
                    <span
                      class="sc-5sgq84-4 gAXKCT"
                    >
                      $
                      24.11
                    </span>
                    <span
                      class="sc-5sgq84-6 evsHkc"
                    >
                       | 
                    </span>
                    <span
                      class="sc-5sgq84-4 sc-5sgq84-5 BEVkH"
                    >
                      <span>
                        143 days
                      </span>
                    </span>
                  </div>
                  <footer
                    class="sc-1549ebs-2 sc-5sgq84-1 frvQEr"
                  >
                    Purchase
                  </footer>
                </div>
              </div>
            </li>
          </ul>
          <footer
            class="sc-1549ebs-8 SGDXW"
          >
            <div
              class="sth0f3-0 kwQJpX"
            >
              <svg
                viewBox="0 0 56 56"
              >
                <title />
                <path
                  d="M42.315 22.461h-1.862v-6.92h-6.919v6.92H22.48v-6.92h-6.918v6.92h-1.877v3.288h1.877v5.18c0 6.481 5.606 11.77 12.485 11.77 6.84 0 12.406-5.289 12.406-11.77v-5.18h1.862zm-8.78 8.468a5.515 5.515 0 0 1-5.488 5.567 5.583 5.583 0 0 1-5.567-5.567v-5.18h11.054z"
                />
              </svg>
            </div>
            <p>
              Powered by Unlock
            </p>
          </footer>
        </div>
      </div>
    </section>
  </div>,
  "debug": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllBySelectText": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getAllByValue": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getBySelectText": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "getByValue": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllBySelectText": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryAllByValue": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryBySelectText": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "queryByValue": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Storyshots Overlay with error 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    .c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  font-family: 'Roboto',sans-serif;
  font-weight: 300;
  font-size: 12px;
  color: var(--darkgrey);
  background-color: var(--white);
  justify-self: right;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  grid-row: 2;
  grid-column: 1;
  width: 120px;
  height: 80px;
  margin-right: -33px;
}

.c7 > * {
  justify-self: left;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  margin-left: -14px;
}

.c7 > p {
  margin-left: auto;
  margin-right: auto;
  width: 63px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  justify-self: center;
  font-family: Roboto;
  font-style: normal;
  font-weight: normal;
  line-height: normal;
  font-size: 12px;
  color: var(--darkgrey);
}

.c8 {
  background-color: var(--brand);
  height: 28px;
  width: 28px;
  border-radius: 50%;
}

.c8 > svg {
  fill: white;
}

.c4 {
  display: grid;
  row-gap: 16px;
  -webkit-column-gap: 32px;
  column-gap: 32px;
  border: solid 1px var(--lightgrey);
  grid-template-columns: 72px;
  grid-auto-flow: column;
  border-radius: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 32px;
  padding-bottom: 40px;
}

.c5 {
  width: 72px;
}

.c6 {
  display: grid;
  grid-gap: 16px;
}

.c6 > h1 {
  font-weight: bold;
  color: var(--red);
  margin: 0px;
  padding: 0px;
}

.c6 > p {
  margin: 0px;
  padding: 0px;
  font-size: 16px;
  color: var(--dimgrey);
}

.c0 {
  position: fixed;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background: linear-gradient( rgba(255,255,255,0) 18%,rgba(255,255,255,0) 29%,var(--offwhite) 48% );
}

.c1 {
  position: fixed;
  display: grid;
  min-height: 375px;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: var(--offwhite);
  justify-items: center;
  padding: 32px;
  padding-bottom: 100px;
  grid-gap: 24px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c2 {
  font-size: 20px;
  font-family: 'Roboto',sans-serif;
  font-weight: bold;
  color: var(--slate);
  text-align: center;
}

.c3 {
  display: grid;
  grid-auto-flow: column;
  grid-gap: 32px;
  list-style: none;
  margin: 0px;
  padding: 0px;
  grid-row: 2;
  grid-column: 1;
}

@media only screen and (min-device-width:0px) and (max-device-width:736px) {
  .c7 {
    display: none;
  }
}

@media (max-width:500px) {
  .c4 {
    grid-template-columns: 1fr;
    grid-auto-flow: row;
    padding: 16px;
  }
}

<div>
      <link
        href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono:300,400,500,700|IBM+Plex+Sans:300,400,500,700|IBM+Plex+Serif:300,400,700|Roboto:300,400,700"
        rel="stylesheet"
      />
      <section>
        <h1>
          HTML Ipsum Presents
        </h1>
        <p>
          <strong>
            Pellentesque habitant morbi tristique
          </strong>
           senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper.
          <em>
            Aenean ultricies mi vitae est.
          </em>
           Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed,
          <code>
            commodo vitae
          </code>
          , ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui.
          <a
            href="."
          >
            Donec non enim
          </a>
           in turpis pulvinar facilisis. Ut felis.
        </p>
        <h2>
          Header Level 2
        </h2>
        <ol>
          <li>
            Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
          </li>
          <li>
            Aliquam tincidunt mauris eu risus.
          </li>
        </ol>
        <blockquote>
          <p>
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus magna. Cras in mi at felis aliquet congue. Ut a est eget ligula molestie gravida. Curabitur massa. Donec eleifend, libero at sagittis mollis, tellus est malesuada tellus, at luctus turpis elit sit amet quam. Vivamus pretium ornare est.
          </p>
        </blockquote>
        <h3>
          Header Level 3
        </h3>
        <ul>
          <li>
            Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
          </li>
          <li>
            Aliquam tincidunt mauris eu risus.
          </li>
        </ul>
        <div
          class="c0"
        >
          <div
            class="c1"
            style="height: 0%;"
          >
            <h1
              class="c2"
            >
              You have reached your limit of free articles. Please purchase access
            </h1>
            <ul
              class="c3"
            >
              <section
                class="c4"
              >
                <img
                  class="c5"
                  src="/static/images/illustrations/network.svg"
                />
                <div
                  class="c6"
                >
                  <h1>
                    Network mismatch
                  </h1>
                  <p>
                    You’re currently on the Foobar network but you need to be on the Rinkeby network. Please switch to Rinkeby.
                  </p>
                </div>
              </section>
            </ul>
            <footer
              class="c7"
            >
              <div
                class="c8"
              >
                <svg
                  viewBox="0 0 56 56"
                >
                  <title />
                  <path
                    d="M42.315 22.461h-1.862v-6.92h-6.919v6.92H22.48v-6.92h-6.918v6.92h-1.877v3.288h1.877v5.18c0 6.481 5.606 11.77 12.485 11.77 6.84 0 12.406-5.289 12.406-11.77v-5.18h1.862zm-8.78 8.468a5.515 5.515 0 0 1-5.488 5.567 5.583 5.583 0 0 1-5.567-5.567v-5.18h11.054z"
                  />
                </svg>
              </div>
              <p>
                Powered by Unlock
              </p>
            </footer>
          </div>
        </div>
      </section>
    </div>
  </body>,
  "container": <div>
    <link
      href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono:300,400,500,700|IBM+Plex+Sans:300,400,500,700|IBM+Plex+Serif:300,400,700|Roboto:300,400,700"
      rel="stylesheet"
    />
    <section>
      <h1>
        HTML Ipsum Presents
      </h1>
      <p>
        <strong>
          Pellentesque habitant morbi tristique
        </strong>
         senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper.
        <em>
          Aenean ultricies mi vitae est.
        </em>
         Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed,
        <code>
          commodo vitae
        </code>
        , ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui.
        <a
          href="."
        >
          Donec non enim
        </a>
         in turpis pulvinar facilisis. Ut felis.
      </p>
      <h2>
        Header Level 2
      </h2>
      <ol>
        <li>
          Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
        </li>
        <li>
          Aliquam tincidunt mauris eu risus.
        </li>
      </ol>
      <blockquote>
        <p>
          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus magna. Cras in mi at felis aliquet congue. Ut a est eget ligula molestie gravida. Curabitur massa. Donec eleifend, libero at sagittis mollis, tellus est malesuada tellus, at luctus turpis elit sit amet quam. Vivamus pretium ornare est.
        </p>
      </blockquote>
      <h3>
        Header Level 3
      </h3>
      <ul>
        <li>
          Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
        </li>
        <li>
          Aliquam tincidunt mauris eu risus.
        </li>
      </ul>
      <div
        class="sc-7wmxqm-0 fANVjX"
      >
        <div
          class="sc-7wmxqm-1 kmwBAR"
          style="height: 0%;"
        >
          <h1
            class="sc-7wmxqm-2 iEBMAT"
          >
            You have reached your limit of free articles. Please purchase access
          </h1>
          <ul
            class="sc-7wmxqm-3 jZRqqJ"
          >
            <section
              class="iopfkf-0 ciSpSG"
            >
              <img
                class="iopfkf-1 fTikWN"
                src="/static/images/illustrations/network.svg"
              />
              <div
                class="iopfkf-2 beHtrM"
              >
                <h1>
                  Network mismatch
                </h1>
                <p>
                  You’re currently on the Foobar network but you need to be on the Rinkeby network. Please switch to Rinkeby.
                </p>
              </div>
            </section>
          </ul>
          <footer
            class="sc-1549ebs-8 SGDXW"
          >
            <div
              class="sth0f3-0 kwQJpX"
            >
              <svg
                viewBox="0 0 56 56"
              >
                <title />
                <path
                  d="M42.315 22.461h-1.862v-6.92h-6.919v6.92H22.48v-6.92h-6.918v6.92h-1.877v3.288h1.877v5.18c0 6.481 5.606 11.77 12.485 11.77 6.84 0 12.406-5.289 12.406-11.77v-5.18h1.862zm-8.78 8.468a5.515 5.515 0 0 1-5.488 5.567 5.583 5.583 0 0 1-5.567-5.567v-5.18h11.054z"
                />
              </svg>
            </div>
            <p>
              Powered by Unlock
            </p>
          </footer>
        </div>
      </div>
    </section>
  </div>,
  "debug": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllBySelectText": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getAllByValue": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getBySelectText": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "getByValue": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllBySelectText": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryAllByValue": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryBySelectText": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "queryByValue": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Storyshots Overlay with multiple locks 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    .c5 {
  display: grid;
  font-weight: 300;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  font-size: 20px;
  line-height: 20px;
  height: 40px;
  border-radius: 4px 4px 0px 0px;
  padding: 0px;
  color: var(--grey);
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  font-family: 'Roboto',sans-serif;
  font-weight: 300;
  font-size: 12px;
  color: var(--darkgrey);
  background-color: var(--white);
  justify-self: right;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  grid-row: 2;
  grid-column: 1;
  width: 120px;
  height: 80px;
  margin-right: -33px;
}

.c13 > * {
  justify-self: left;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  margin-left: -14px;
}

.c13 > p {
  margin-left: auto;
  margin-right: auto;
  width: 63px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  justify-self: center;
  font-family: Roboto;
  font-style: normal;
  font-weight: normal;
  line-height: normal;
  font-size: 12px;
  color: var(--darkgrey);
}

.c4 {
  display: grid;
  justify-items: stretch;
  margin: 0px;
  padding: 0px;
  font-family: 'IBM Plex Sans','Helvetica Neue',Arial,sans-serif;
  width: 200px;
  height: 180px;
  grid-gap: 0px;
  background-clip: padding-box;
  grid-template-rows: 40px 140px;
  opacity: 1;
  cursor: pointer;
}

.c12 {
  display: grid;
  font-weight: 300;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  font-size: 20px;
  line-height: 20px;
  height: 40px;
  border-radius: 0px 0px 4px 4px;
  padding: 0px;
  width: 200px;
  background-color: var(--green);
  color: var(--white);
}

.c6 {
  display: grid;
  height: 140px;
  width: 200px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-items: center;
  text-align: center;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  padding: 0px;
  grid-template-rows: 40px 30px;
  grid-gap: 8px;
  padding-top: 0px;
  border: 1px solid transparent;
  border-radius: 4px;
  background-color: var(--white);
  padding-top: 13px;
}

.c6:hover {
  border: 1px solid var(--activegreen);
}

.c6:hover .c11 {
  background-color: var(--activegreen);
}

.c7 {
  font-size: 30px;
  text-transform: uppercase;
  color: var(--slate);
  font-weight: bold;
}

.c8 {
  font-size: 20px;
  font-weight: 300;
  color: var(--grey);
}

.c10 {
  font-size: 20px;
  font-weight: 300;
  color: var(--grey);
}

.c9 {
  color: var(--lightgrey);
}

.c14 {
  background-color: var(--brand);
  height: 28px;
  width: 28px;
  border-radius: 50%;
}

.c14 > svg {
  fill: white;
}

.c0 {
  position: fixed;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background: linear-gradient( rgba(255,255,255,0) 18%,rgba(255,255,255,0) 29%,var(--offwhite) 48% );
}

.c1 {
  position: fixed;
  display: grid;
  min-height: 375px;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: var(--offwhite);
  justify-items: center;
  padding: 32px;
  padding-bottom: 100px;
  grid-gap: 24px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c2 {
  font-size: 20px;
  font-family: 'Roboto',sans-serif;
  font-weight: bold;
  color: var(--slate);
  text-align: center;
}

.c3 {
  display: grid;
  grid-auto-flow: column;
  grid-gap: 32px;
  list-style: none;
  margin: 0px;
  padding: 0px;
  grid-row: 2;
  grid-column: 1;
}

@media only screen and (min-device-width:0px) and (max-device-width:736px) {
  .c13 {
    display: none;
  }
}

<div>
      <link
        href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono:300,400,500,700|IBM+Plex+Sans:300,400,500,700|IBM+Plex+Serif:300,400,700|Roboto:300,400,700"
        rel="stylesheet"
      />
      <section>
        <h1>
          HTML Ipsum Presents
        </h1>
        <p>
          <strong>
            Pellentesque habitant morbi tristique
          </strong>
           senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper.
          <em>
            Aenean ultricies mi vitae est.
          </em>
           Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed,
          <code>
            commodo vitae
          </code>
          , ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui.
          <a
            href="."
          >
            Donec non enim
          </a>
           in turpis pulvinar facilisis. Ut felis.
        </p>
        <h2>
          Header Level 2
        </h2>
        <ol>
          <li>
            Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
          </li>
          <li>
            Aliquam tincidunt mauris eu risus.
          </li>
        </ol>
        <blockquote>
          <p>
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus magna. Cras in mi at felis aliquet congue. Ut a est eget ligula molestie gravida. Curabitur massa. Donec eleifend, libero at sagittis mollis, tellus est malesuada tellus, at luctus turpis elit sit amet quam. Vivamus pretium ornare est.
          </p>
        </blockquote>
        <h3>
          Header Level 3
        </h3>
        <ul>
          <li>
            Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
          </li>
          <li>
            Aliquam tincidunt mauris eu risus.
          </li>
        </ul>
        <div
          class="c0"
        >
          <div
            class="c1"
            style="height: 0%;"
          >
            <h1
              class="c2"
            >
              You have reached your limit of free articles. Please purchase access
            </h1>
            <ul
              class="c3"
            >
              <li
                class="c4"
              >
                <header
                  class="c5"
                >
                  One Month
                </header>
                <div>
                  <div
                    class="c6"
                  >
                    <div
                      class="c7"
                    >
                      0.01
                       Eth
                    </div>
                    <div>
                      <span
                        class="c8"
                      >
                        $
                        1.96
                      </span>
                      <span
                        class="c9"
                      >
                         | 
                      </span>
                      <span
                        class="c10"
                      >
                        <span>
                          143 days
                        </span>
                      </span>
                    </div>
                    <footer
                      class="c11 c12"
                    >
                      Purchase
                    </footer>
                  </div>
                </div>
              </li>
              <li
                class="c4"
              >
                <header
                  class="c5"
                >
                  One Year
                </header>
                <div>
                  <div
                    class="c6"
                  >
                    <div
                      class="c7"
                    >
                      0.01
                       Eth
                    </div>
                    <div>
                      <span
                        class="c8"
                      >
                        $
                        1.96
                      </span>
                      <span
                        class="c9"
                      >
                         | 
                      </span>
                      <span
                        class="c10"
                      >
                        <span>
                          143 days
                        </span>
                      </span>
                    </div>
                    <footer
                      class="c11 c12"
                    >
                      Purchase
                    </footer>
                  </div>
                </div>
              </li>
            </ul>
            <footer
              class="c13"
            >
              <div
                class="c14"
              >
                <svg
                  viewBox="0 0 56 56"
                >
                  <title />
                  <path
                    d="M42.315 22.461h-1.862v-6.92h-6.919v6.92H22.48v-6.92h-6.918v6.92h-1.877v3.288h1.877v5.18c0 6.481 5.606 11.77 12.485 11.77 6.84 0 12.406-5.289 12.406-11.77v-5.18h1.862zm-8.78 8.468a5.515 5.515 0 0 1-5.488 5.567 5.583 5.583 0 0 1-5.567-5.567v-5.18h11.054z"
                  />
                </svg>
              </div>
              <p>
                Powered by Unlock
              </p>
            </footer>
          </div>
        </div>
      </section>
    </div>
  </body>,
  "container": <div>
    <link
      href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono:300,400,500,700|IBM+Plex+Sans:300,400,500,700|IBM+Plex+Serif:300,400,700|Roboto:300,400,700"
      rel="stylesheet"
    />
    <section>
      <h1>
        HTML Ipsum Presents
      </h1>
      <p>
        <strong>
          Pellentesque habitant morbi tristique
        </strong>
         senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper.
        <em>
          Aenean ultricies mi vitae est.
        </em>
         Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed,
        <code>
          commodo vitae
        </code>
        , ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui.
        <a
          href="."
        >
          Donec non enim
        </a>
         in turpis pulvinar facilisis. Ut felis.
      </p>
      <h2>
        Header Level 2
      </h2>
      <ol>
        <li>
          Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
        </li>
        <li>
          Aliquam tincidunt mauris eu risus.
        </li>
      </ol>
      <blockquote>
        <p>
          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus magna. Cras in mi at felis aliquet congue. Ut a est eget ligula molestie gravida. Curabitur massa. Donec eleifend, libero at sagittis mollis, tellus est malesuada tellus, at luctus turpis elit sit amet quam. Vivamus pretium ornare est.
        </p>
      </blockquote>
      <h3>
        Header Level 3
      </h3>
      <ul>
        <li>
          Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
        </li>
        <li>
          Aliquam tincidunt mauris eu risus.
        </li>
      </ul>
      <div
        class="sc-7wmxqm-0 fANVjX"
      >
        <div
          class="sc-7wmxqm-1 kmwBAR"
          style="height: 0%;"
        >
          <h1
            class="sc-7wmxqm-2 iEBMAT"
          >
            You have reached your limit of free articles. Please purchase access
          </h1>
          <ul
            class="sc-7wmxqm-3 jZRqqJ"
          >
            <li
              class="sc-1549ebs-0 sc-5sgq84-0 bvdsPH"
            >
              <header
                class="sc-1549ebs-1 cWinrG"
              >
                One Month
              </header>
              <div>
                <div
                  class="sc-1549ebs-3 sc-5sgq84-2 dyJsTl"
                >
                  <div
                    class="sc-5sgq84-3 bIZSQm"
                  >
                    0.01
                     Eth
                  </div>
                  <div>
                    <span
                      class="sc-5sgq84-4 gAXKCT"
                    >
                      $
                      1.96
                    </span>
                    <span
                      class="sc-5sgq84-6 evsHkc"
                    >
                       | 
                    </span>
                    <span
                      class="sc-5sgq84-4 sc-5sgq84-5 BEVkH"
                    >
                      <span>
                        143 days
                      </span>
                    </span>
                  </div>
                  <footer
                    class="sc-1549ebs-2 sc-5sgq84-1 frvQEr"
                  >
                    Purchase
                  </footer>
                </div>
              </div>
            </li>
            <li
              class="sc-1549ebs-0 sc-5sgq84-0 bvdsPH"
            >
              <header
                class="sc-1549ebs-1 cWinrG"
              >
                One Year
              </header>
              <div>
                <div
                  class="sc-1549ebs-3 sc-5sgq84-2 dyJsTl"
                >
                  <div
                    class="sc-5sgq84-3 bIZSQm"
                  >
                    0.01
                     Eth
                  </div>
                  <div>
                    <span
                      class="sc-5sgq84-4 gAXKCT"
                    >
                      $
                      1.96
                    </span>
                    <span
                      class="sc-5sgq84-6 evsHkc"
                    >
                       | 
                    </span>
                    <span
                      class="sc-5sgq84-4 sc-5sgq84-5 BEVkH"
                    >
                      <span>
                        143 days
                      </span>
                    </span>
                  </div>
                  <footer
                    class="sc-1549ebs-2 sc-5sgq84-1 frvQEr"
                  >
                    Purchase
                  </footer>
                </div>
              </div>
            </li>
          </ul>
          <footer
            class="sc-1549ebs-8 SGDXW"
          >
            <div
              class="sth0f3-0 kwQJpX"
            >
              <svg
                viewBox="0 0 56 56"
              >
                <title />
                <path
                  d="M42.315 22.461h-1.862v-6.92h-6.919v6.92H22.48v-6.92h-6.918v6.92h-1.877v3.288h1.877v5.18c0 6.481 5.606 11.77 12.485 11.77 6.84 0 12.406-5.289 12.406-11.77v-5.18h1.862zm-8.78 8.468a5.515 5.515 0 0 1-5.488 5.567 5.583 5.583 0 0 1-5.567-5.567v-5.18h11.054z"
                />
              </svg>
            </div>
            <p>
              Powered by Unlock
            </p>
          </footer>
        </div>
      </div>
    </section>
  </div>,
  "debug": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllBySelectText": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getAllByValue": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getBySelectText": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "getByValue": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllBySelectText": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryAllByValue": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryBySelectText": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "queryByValue": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
